--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@
     --shadow-custom: 0px 4px 12px rgba(255, 255, 255, 0.3);
   }
 }
+
+.input {
+  @apply w-full border border-gray-400 rounded-md px-4 pt-7 pb-2 text-sm placeholder-transparent outline-none focus:border-2 focus:border-blue-500;
+}
