--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@ body,
   height: 100%;
 }
 
+h1 {
+  @apply underline font-semibold text-gray-300 text-3xl !font-pompiere;
+}
+
 .container {
   @apply my-9 w-[90%] mx-auto rounded shadow-custom h-full grow;
 }
