--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @font-face {
   font-family: "pompiere";
   src: url(./assets/fonts/Pompiere-Regular.ttf);
@@ -7,6 +9,7 @@
   @theme {
     --font-pompiere: "pompiere", sans-serif;
     --shadow-custom: 0px 4px 12px rgba(255, 255, 255, 0.3);
+    --shadow-custom-black: 0px 4px 12px rgba(0, 0, 0, 0.3);
   }
 }
 * {
@@ -22,19 +25,19 @@ body,
 }
 
 h1 {
-  @apply underline font-semibold text-gray-300 text-3xl !font-pompiere;
+  @apply underline font-semibold text-gray-700 dark:text-gray-300 text-3xl !font-pompiere;
 }
 
 .container {
-  @apply my-9 w-[90%] mx-auto rounded shadow-custom h-full grow;
+  @apply my-9 w-[90%] mx-auto rounded shadow-custom-black dark:shadow-custom h-full grow;
 }
 
 .input {
-  @apply w-full border border-gray-400 rounded-md px-4 pt-7 pb-2 text-sm placeholder-transparent outline-none focus:border-2 focus:border-blue-500;
+  @apply w-full border text-white border-gray-400 rounded-md px-4 pt-7 pb-2 text-sm placeholder-transparent outline-none focus:border-2 focus:border-blue-500;
 }
 
 .inputSettings {
-  @apply bg-gray-900 py-1 px-2 rounded text-sm outline-none focus:border-2 focus:border-blue-600 w-[250px];
+  @apply bg-gray-900 py-1 text-white px-2 rounded text-sm outline-none focus:border-2 focus:border-blue-600 w-[250px];
 }
 
 /* Neutraliser le comportement d'autofill */
