Ajout fonction ajout d'image dans conversation et Waves. Prévisualisation. responsive page Message et Conversation .

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ h1 {
 }
 
 .container {
-  @apply my-9 w-[90%] mx-auto rounded shadow-custom-black dark:shadow-custom h-full grow;
+  @apply my-9 w-[90%] mx-auto rounded shadow-custom-black dark:shadow-custom min-h-screen grow;
 }
 
 .input {
